--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "ssoEnabled": false,
     "ssoDiscoveryUrl": "http://example.com",
     "standalone": true,
-    "standaloneProtocol": "neo4j+s",
-    "standaloneHost": "5f57800f.databases.neo4j.io",
+    "standaloneProtocol": "neo4j",
+    "standaloneHost": "7b37ebee.databases.neo4j.io",
     "standalonePort": "7687",
     "standaloneDatabase": "neo4j",
     "standaloneDashboardName": "IMPAX DEMO",
